[workspace]
members = ["core", "derive", "generator", "meta", "pest"]
resolver = "2"

package.authors = ["Dragoș Tiselice <dragostiselice@gmail.com>", "Tomas Tauber <me@tomtau.be>", "Boyi Huang <3266343194@qq.com>"]
package.edition = "2021"
package.version = "0.0.3"
package.description = "Early WIP prototype version of pest 3.0"
package.license = "MIT OR Apache-2.0"

[workspace.dependencies]
pest3 = { path = "./pest", package = "pest3" }
pest3_meta = { path = "./meta", package = "pest3_meta" }
pest3_generator = { path = "./generator", package = "pest3_generator" }
unicode-width = { version = "0.2.1" }
pest2 = { version = "2.8.2", package = "pest" }
pest2_derive =  { version = "2.8.2", package = "pest_derive" }
criterion = "0.5.1"
