[package]
name = "pest3_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
pest3_generator = { path = "../generator", version = "0.0.3" }
pest3_core = { path = "../core", version = "0.0.3" }

[dev-dependencies]
pest3_core = { path = "../core", version = "0.0.3" }
pest3_generator = { path = "../generator", version = "0.0.3", features = [ "meta" ] }
anyhow = "1"
serde_json = "1.0.117"
criterion.workspace = true

[[bench]]
name = "json"
harness = false
