[package]
name = "pest3_generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
pest3_meta = { path = "../meta", version = "0.0.0-prealpha0" }
pest3 = { path = "../pest", version = "0.0.0-prealpha0" }
