[package]
name = "pest3_generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[features]
meta = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
pest3_meta = { path = "../meta", version = "0.0.2" }
pest3_core = { path = "../core", version = "0.0.2" }

[dev-dependencies]
pest3_generator = { path = ".", features = ["meta"] }
