[package]
name = "pest3"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
unicode-width.workspace = true
pest2.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "position"
harness = false
