[package]
name = "pest3"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[features]
default = []
derive = ["dep:pest3_derive"]

[dependencies]
pest3_core = { path = "../core", version = "0.0.3" }
pest3_derive = { path = "../derive", version = "0.0.3", optional = true }

unicode-width.workspace = true
pest2.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "position"
harness = false
